fixes mistake that left outdated covid19 update with respect to pinestraw

--- a/_collections/_information/covid-19.html
+++ b/_collections/_information/covid-19.html
@@ -14,8 +14,7 @@ menu: hide
     <ul>
       <li>The Spring Camporee (March 20-22) is cancelled.</li>
       <li>Wednesday Meetings for March 18 and March 25 are cancelled (per APS school closures).</li>
-      <li>We still plan to deliver pine straw on March 28.</li>
-      <li>Pinestraw delivery has been postponed to Saturday, April 25</li>
+      <li>The pinestraw order deadline has been postponed to April 18 and pinestraw delivery has been postponed to Saturday, April 25</li>
       <li>We still plan on hiking and mountain biking in Cloudland Canyon on April 18-19.</li>
     </ul>
     <p>Questions? <a href="/contact.html">Contact Us</a></p>
